[metadata]

name = dna-J-E-J-S
version = 0.0.1
url = https://github.com/J-E-J-S/dna-package
author = James Sanders
author_email = james.sanders1711@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
